--- a/index.html
+++ b/index.html
@@ -13,214 +13,91 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container" id="cv-form">
-      <h1 class="text-center my-2">Resume Generator</h1>
-      <p class="text-center">Make your work easier</p>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Personal Information</h3>
-          <div class="form-group mt-2">
-            <label for="nameField">Name</label>
-            <input
-              type="text"
-              id="nameField"
-              placeholder="Enter your Name"
-              class="form-control"
-            />
-          </div>
-          <div class="form-group mt-2">
-            <label for="contactField">Contact No</label>
-            <input
-              type="text"
-              id="contactField"
-              placeholder="Enter your Mobile No"
-              class="form-control"
-            />
-          </div>
-          <div class="form-group mt-2">
-            <label for="addressField">Address</label>
-            <textarea
-              id="addressField"
-              placeholder="Enter Address"
-              class="form-control"
-              rows="5"
-            ></textarea>
-          </div>
-          <div class="form-group mt-2">
-            <label for="">Select your photo</label>
-            <input id="imgField" type="file" class="form-control" />
-          </div>
-          <div class="text-secondary my-3">Important Links</div>
-          <div class="form-group mt-2">
-            <label for="gitField">GitHub</label>
-            <input
-              type="text"
-              id="gitField"
-              placeholder="GitHub Link"
-              class="form-control"
-            />
-          </div>
-          <div class="form-group mt-2">
-            <label for="linkedInField">LinkedIn</label>
-            <input
-              type="text"
-              id="linkedField"
-              placeholder="LinkedIn Link"
-              class="form-control"
-            />
-          </div>
-          <div class="form-group mt-2">
-            <label for="leetcodeField">Leetcode</label>
-            <input
-              type="text"
-              id="leetcodeField"
-              placeholder="Leetcode Link"
-              class="form-control"
-            />
-          </div>
-        </div>
-        <div class="col-md-6">
-          <h3>Professional Information</h3>
-          <div class="form-group mt-2">
-            <label for="">Objective</label>
-            <textarea
-              id="objField"
-              placeholder="Enter here"
-              class="form-control"
-              rows="5"
-            ></textarea>
-          </div>
-          <div class="form-group mt-2" id="we">
-            <label for="">Work Experience</label>
-            <textarea
-              id="weField"
-              placeholder="Enter here"
-              class="form-control weField"
-            ></textarea>
-            <div class="container text-center mt-3" id="weAddButton">
-              <button onclick="addnewWeField()" class="btn btn-primary btn-sm">
-                Add
-              </button>
-            </div>
-          </div>
-          <div class="form-group mt-2" id="aq">
-            <label for="">Academic Qualification</label>
-            <textarea
-              id="acdField"
-              placeholder="Enter here"
-              class="form-control eqField"
-            ></textarea>
-            <div class="container text-center mt-3" id="aqAddButton">
-              <button onclick="addnewAq()" class="btn btn-primary btn-sm">
-                Add
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container text-center">
-        <button class="btn btn-primary btn-lg mt-3" onclick="generateCV()">
-          Generate CV
-        </button>
-      </div>
+    <nav class="navbar navbar-light bg-light">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <img
+          src="./logo.jpg"
+          width="90"
+          height="90"
+          class="d-inline-block align-top"
+        />
+        <span class="t1">resume</span>
+        <span class="t2">builder</span>
+      </a>
+    </nav>
+    <div class="content">
+      <h6>ONLINE RESUME BUILDER</h6>
+      <p class="info1">
+        Only 2% of resumes make it past the first round.Be in the top 2%
+      </p>
+      <p class="info2">
+        USe professional field-talent reume templates that follow the exact
+        resume rules employers look for .Easy to use and done within minutes-try
+        now for free!!
+      </p>
+      <br />
+      <button class="btn btn-outline-primary">
+        <a href="next.html" class="anchor">CREATE MY RESUME</a>
+      </button>
     </div>
-    <div class="container" id="cv-template">
-      <div class="row">
-        <div class="col-md-4 text-center py-5 background">
-          <img
-            src="./person.jpg"
-            alt="person"
-            class="img-fluid myImg"
-            id="imgTemplate"
-          />
-          <div class="container">
-            <p id="nameT1">Sabarnika S</p>
-            <p id="contactT">+91 7094358828</p>
-            <p id="addressT">Erode,TamilNadu, India</p>
-            <hr />
-            <p>
-              <a href="#1" id="gitT">https://github.com</a>
-            </p>
-            <p>
-              <a href="#2" id="linkedT">https://linkedin.com</a>
-            </p>
-            <p>
-              <a href="#3" id="leetcodeT">https://leetcode.com</a>
-            </p>
-          </div>
+    <div>
+      <img src="resume.png" class="resume" />
+    </div>
+    <div>
+      <div>
+        <img src="" />
+      </div>
+      <div class="para2">
+        <div class="p1">
+          <img src="floating.jpg" class="floating" />
         </div>
-        <div class="col-md-8 py-5">
-          <h1 class="text-center" style="font-weight: 980" id="nameT2">
-            Sabarnika S
-          </h1>
-          <div class="card mt-4">
-            <div class="card-header">
-              <h3>Objective</h3>
-            </div>
-            <div class="card-body">
-              <p id="objT">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Delectus deleniti nihil hic dolor atque corporis sequi fugiat
-                omnis, porro aliquid esse maxime quisquam voluptatum
-                perferendis, eos laudantium enim natus pariatur. Eos ea quia
-                porro? Ducimus nisi dolore rem sequi minus aperiam, hic veniam
-                enim dicta dolor molestiae, voluptate harum. Necessitatibus.
-              </p>
-            </div>
-          </div>
-          <div class="card mt-4">
-            <div class="card-header">
-              <h3>Work Experience</h3>
-            </div>
-            <div class="card-body">
-              <ul id="workT">
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card mt-4">
-            <div class="card-header">
-              <h3>Academic Qualification</h3>
-            </div>
-            <div class="card-body">
-              <ul id="aqT">
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-                <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Consectetur, iure.
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="container mt-3 text-center">
-            <button onclick="printCV()" class="btn background">Print CV</button>
-          </div>
+        <div class="p2">
+          <h3>Use the best resume maker as your guide</h3>
+          <br />
+          <p>
+            Getting the dream job can seem like an impossible task.We're here to
+            change that.Give yourself a real advantage with the best online
+            resume maker created by experts,improved by data,trusted by millions
+            of professtionals.
+          </p>
+          <br />
+          <button type="button" class="btn btn-outline-primary">
+            <a href="next.html" class="anchor">CREATE MY RESUME</a>
+          </button>
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="index.js"></script>
+    <br />
+    <div class="para3">
+      <div class="p31">
+        <img src="win.jpg" />
+        <h4>Make a resumee that wins interviews</h4>
+        <p>
+          Our resume maker with its advanced creation tools to tell a
+          professional story that engages recruiters,hiring managers and even
+          COs
+        </p>
+      </div>
+      <br />
+      <br />
+      <div class="p32">
+        <img src="easy.png" />
+        <h4>Resume writing made easy</h4>
+        <p>
+          Resume writing has never been this effortless.Pre-generated
+          text,visual designs and more - all already integrated into the resume
+          maker. Just fill in your details
+        </p>
+      </div>
+      <div class="p33">
+        <img src="tested.png" />
+        <h4>A recruiter-tested CV maker tool</h4>
+        <p>
+          Our resume builder and it's pre-generated text content are tested by
+          recruiters and IT experts.We help your resume competitive in the
+          hiring process
+        </p>
+      </div>
+    </div>
   </body>
 </html>
