--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
     <div>
       <img src="resume.png" class="resume" />
     </div>
+    <br />
+    <br />
     <div>
-      <div>
-        <img src="" />
-      </div>
       <div class="para2">
         <div class="p1">
           <img src="floating.jpg" class="floating" />
@@ -67,36 +66,51 @@
         </div>
       </div>
     </div>
-    <br />
-    <div class="para3">
-      <div class="p31">
-        <img src="win.jpg" />
-        <h4>Make a resumee that wins interviews</h4>
-        <p>
-          Our resume maker with its advanced creation tools to tell a
-          professional story that engages recruiters,hiring managers and even
-          COs
-        </p>
-      </div>
-      <br />
-      <br />
-      <div class="p32">
-        <img src="easy.png" />
-        <h4>Resume writing made easy</h4>
-        <p>
-          Resume writing has never been this effortless.Pre-generated
-          text,visual designs and more - all already integrated into the resume
-          maker. Just fill in your details
-        </p>
-      </div>
-      <div class="p33">
-        <img src="tested.png" />
-        <h4>A recruiter-tested CV maker tool</h4>
-        <p>
-          Our resume builder and it's pre-generated text content are tested by
-          recruiters and IT experts.We help your resume competitive in the
-          hiring process
-        </p>
+
+    <div>
+      <div class="para3">
+        <div class="p31">
+          <img src="win.jpg" />
+          <br />
+          <br />
+          <br />
+          <h6>Make a resumee that wins interviews</h6>
+          <br />
+          <p>
+            Our resume maker with advanced creation tools says professional
+            story that engages recruiters,hiring managers and even COs
+          </p>
+        </div>
+        <br />
+        <br />
+        <div class="p32">
+          <img src="easy.png" />
+          <br />
+          <br />
+          <br />
+          <h6>Resume writing made easy</h6>
+          <br />
+
+          <p>
+            Resume writing has never been this effortless.Pre-generated
+            text,visual designs and more - all already integrated into the
+            resume maker. Just fill in your details
+          </p>
+        </div>
+        <div class="p33">
+          <img src="tested.png" />
+          <br />
+          <br />
+          <br />
+          <h6>A recruiter-tested CV maker tool</h6>
+          <br />
+
+          <p>
+            Our resume builder and it's pre-generated text content are tested by
+            recruiters and IT experts.We help your resume competitive in the
+            hiring process
+          </p>
+        </div>
       </div>
     </div>
   </body>
